samples/_failures_safe/1761130363_a8e3ef_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d9a623ac.c: In function ‘matrix_print’:
./samples/SAFE/__tmp_d9a623ac.c:135:13: error: expected expression at end of input
  135 |             matrix_get(m, i,
      |             ^~~~~~~~~~
./samples/SAFE/__tmp_d9a623ac.c:135:13: error: too few arguments to function ‘matrix_get’
./samples/SAFE/__tmp_d9a623ac.c:34:5: note: declared here
   34 | int matrix_get(struct Matrix *m, int row, int col, double *val) {
      |     ^~~~~~~~~~
./samples/SAFE/__tmp_d9a623ac.c:135:13: error: expected declaration or statement at end of input
  135 |             matrix_get(m, i,
      |             ^~~~~~~~~~
./samples/SAFE/__tmp_d9a623ac.c:135:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d9a623ac.c:135:13: error: expected declaration or statement at end of input
